restore preview selection functionality, remove progressbar error, fix visible scrollbars using the static map

--- a/StaticMap.css
+++ b/StaticMap.css
@@ -1,15 +1,20 @@
+html, body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    overflow: hidden;
+} /* this missing was the reason */
+
 model-viewer {
     cursor: grab;
-    display: flex;
-    /*height: 100%;
-    overflow: hidden;*/
+    display: block; /* flex to block */
     height: 100vh;
     width: 100%;
-    overflow-y: hidden;
+    overflow: hidden; /* overflow-y to overflow */
     position: relative;
     user-select: none;
-  }
-  
+}
+
   #checkbox-container {
     position: absolute;
     top: 10px;
@@ -18,7 +23,7 @@ model-viewer {
     padding: 5px;
     border-radius: 5px;
   }
-  
+
   #progress-bar {
     position: absolute;
     top: 50%;
@@ -29,7 +34,7 @@ model-viewer {
     background-color: #ccc;
     display: none;
   }
-  
+
   #progress-bar div {
     height: 100%;
     background-color: #4caf50;
